# ComputeBenchmark

./: pyproject.toml  setup.sh
computebenchmark/: cli.py
computebenchmark/algorithms/: evaluator.py
computebenchmark/algorithms/trainers/: __init__.py  base.py  dapo.py  grpo.py  ppo.py  rlvr.py
computebenchmark/compute/: metrics.py  report.py  runner.py
computebenchmark/data/: gsm8k.py
configs/: accelerate_zero2.yaml  deepspeed_zero2.json
